--- a/src/app/shared/components/navbar/navbar.html
+++ b/src/app/shared/components/navbar/navbar.html
@@ -1,7 +1,7 @@
 <nav class="navbar">
     <div class="navbar-container">
         <a routerLink="/" class="navbar-logo">
-            <span class="logo-icon">🔷</span>
+            <img src="/assets/images/logo.png" alt="ShopSphere Logo" class="logo-image" />
             <span class="logo-text">{{ appTitle }}</span>
         </a>
 
