--- a/src/app/app.html
+++ b/src/app/app.html
@@ -8,10 +8,13 @@
   <main class="main-content">
     <router-outlet></router-outlet>
   </main>
+
+  <app-footer></app-footer>
 </div>
 
 <div *ngIf="!isLoggedIn">
   <router-outlet></router-outlet>
+  <app-footer></app-footer>
 </div>
 
 <!-- Low Stock Alerts Modal -->
