--- a/src/app/features/auth/register/register.html
+++ b/src/app/features/auth/register/register.html
@@ -19,7 +19,7 @@
             <div class="form-group">
                 <label for="phoneNumber">Phone Number</label>
                 <input id="phoneNumber" type="tel" [(ngModel)]="phoneNumber" name="phoneNumber" required
-                    placeholder="+1 (555) 000-0000" autocomplete="tel" />
+                    placeholder="+91 1234567890" autocomplete="tel" />
             </div>
 
             <div class="form-group horizontal">
